--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 						<br />
 						and
 						<br />
-						Technical Writing.</p>
+						Technical Writing</p>
 						<footer>
 							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+								<li><a href="#main" class="button fit scrolly">Get to know me</a></li>
 							</ul>
 						</footer>
 
@@ -79,15 +79,14 @@
 
 					<header class="special container">
 						<span class="icon solid fa-chart-bar"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+						<h2>I am a data scientist with experience working as a technical writer
 						<br />
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
+						In this site you can find details about my background and projects.</h2>
+						<p>If you are trying to navigate a career change, require specific services,
 						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3,
-						and, like all my stuff,
+						or want to learn more about these disciplines, you came to the right place.
 						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						feel free to explore <a href="http://html5up.net/license">my projects section</a> license. Have fun!</p>
 					</header>
 
 					<!-- One -->
