--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 					<h1 id="logo"><a href="index.html">Brenda Leyva's Portfolio</a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
+							<li class="current"><a href="index.html">Home</a></li>
 							<li class="submenu">
-								<a href="#">Layouts</a>
+								<a href="#">Portfolio</a>
 								<ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
@@ -40,7 +40,7 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="#" class="button primary">Contact</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -79,9 +79,9 @@
 
 					<header class="special container">
 						<span class="icon solid fa-chart-bar"></span>
-						<h2>I am a data scientist with experience working as a technical writer
+						<p>I am a data scientist with experience working as a technical writer
 						<br />
-						In this site you can find details about my background and projects.</h2>
+						In this site you can find details about my background and projects.</p>
 						<p>If you are trying to navigate a career change, require specific services,
 						<br />
 						or want to learn more about these disciplines, you came to the right place.
