--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<br />
 						or want to learn more about these disciplines, you came to the right place.
 						<br />
-						feel free to explore <a href="http://html5up.net/license">my projects section</a> license. Have fun!</p>
+						feel free to explore <a href="http://html5up.net/license">my projects section</a>.</p>
 					</header>
 
 					<!-- One -->
