--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
 						<ul>
 							<li class="current"><a href="index.html">Home</a></li>
 							<li class="submenu">
-								<a href="#">Portfolio</a>
+								<a href="my-projects.html">My Projects</a>
 								<ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
 									<li class="submenu">
 										<a href="#">Submenu</a>
 										<ul>
@@ -40,7 +39,7 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button primary">Contact</a></li>
+							<li><a href="concact.html" class="button primary">Contact</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -86,7 +85,7 @@
 						<br />
 						or want to learn more about these disciplines, you came to the right place.
 						<br />
-						feel free to explore <a href="http://html5up.net/license">my projects section</a>.</p>
+						Feel free to explore <a href="my-projects.html">my projects section</a>.</p>
 					</header>
 
 					<!-- One -->
