--- a/my-projects.html
+++ b/my-projects.html
@@ -27,6 +27,7 @@
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="https://brenda-leyva89.medium.com/">Blog</a></li>
 									<li class="submenu">
 										<a href="#">Submenu</a>
 										<ul>
@@ -49,7 +50,7 @@
 
 					<header class="special container">
 						<span class="icon solid fa-laptop"></span>
-						<h2>Welcome to <strong>my projects</strong>section</h2>
+						<h2>Welcome to <strong>my projects</strong> section</h2>
 						<p>You can consult the details of my craft here.</p>
 					</header>
 
@@ -129,7 +130,7 @@
 
 									<section>
 										<header>
-											<h3>Know more about Technical Writing</h3>
+											<h3>The world of Technical Writing</h3>
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 										<footer>
@@ -144,7 +145,7 @@
 
 									<section>
 										<header>
-											<h3>General Interests</h3>
+											<h3>My general interests</h3>
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 										<footer>
