--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 							<li class="submenu">
 								<a href="my-projects.html">My Projects</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">Data Science and AI</a></li>
+									<li><a href="right-sidebar.html">Technical Writing</a></li>
+									<li><a href="no-sidebar.html">Miscellaneous</a></li>
+									<li><a href="https://brenda-leyva89.medium.com/">Blog</a></li>
 									<li class="submenu">
 										<a href="#">Submenu</a>
 										<ul>
@@ -39,7 +40,7 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="concact.html" class="button primary">Contact</a></li>
+							<li><a href="contact.html" class="button primary">Contact</a></li>
 						</ul>
 					</nav>
 				</header>
