--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 							<li class="submenu">
 								<a href="my-projects.html">My Projects</a>
 								<ul>
-									<li><a href="left-sidebar.html">Data Science and AI</a></li>
-									<li><a href="right-sidebar.html">Technical Writing</a></li>
-									<li><a href="no-sidebar.html">Miscellaneous</a></li>
+									<li><a href="data-science.html">Data Science and AI</a></li>
+									<li><a href="tech-writing.html">Technical Writing</a></li>
+									<li><a href="misc.html">Miscellaneous</a></li>
 									<li><a href="https://brenda-leyva89.medium.com/">Blog</a></li>
 									<li class="submenu">
 										<a href="#">Submenu</a>
