--- a/my-projects.html
+++ b/my-projects.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Left Sidebar - Twenty by HTML5 UP</title>
+		<title>My Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,9 +24,9 @@
 							<li class="submenu">
 								<a href="my-projects.html">My Projects</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="data-science.html">Data Science and AI</a></li>
+									<li><a href="tech-writing.html">Technical Writing</a></li>
+									<li><a href="misc.html">Miscellaneous</a></li>
 									<li><a href="https://brenda-leyva89.medium.com/">Blog</a></li>
 									<li class="submenu">
 										<a href="#">Submenu</a>
@@ -64,7 +64,7 @@
 										<div class="sidebar">
 											<section>
 												<header>
-													<h3>Data Science Focus</h3>
+													<h3><strong>Data Science Focus</strong></h3>
 												</header>
 												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
 												<footer>
@@ -77,7 +77,7 @@
 											<section>
 												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 												<header>
-													<h3>The Technical Writing Process</h3>
+													<h3><strong>The Technical Writing Process</strong></h3>
 												</header>
 												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 												<footer>
@@ -96,7 +96,7 @@
 											<section>
 												<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 												<header>
-													<h3>Why Multidisciplinary Matters</h3>
+													<h3><strong>Why Multidisciplinary Matters</strong></h3>
 												</header>
 												<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum massa. Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
 												<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan. </p>
