--- a/my-projects.html
+++ b/my-projects.html
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Brenda's Portfolio'</span></a></h1>
+					<h1 id="logo"><a href="index.html">My Projects</span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Home</a></li>
