--- a/index.html
+++ b/index.html
@@ -24,20 +24,33 @@
 							<li class="submenu">
 								<a href="my-projects.html">My Projects</a>
 								<ul>
+							<li class="current"><a href="index.html">Home</a></li>
+							<li class="submenu">
+								<a href="my-projects.html">My Projects</a>
+								<ul>
 									<li><a href="data-science.html">Data Science and AI</a></li>
-									<li><a href="tech-writing.html">Technical Writing</a></li>
-									<li><a href="misc.html">Miscellaneous</a></li>
-									<li><a href="https://brenda-leyva89.medium.com/">Blog</a></li>
 									<li class="submenu">
-										<a href="#">Submenu</a>
 										<ul>
-											<li><a href="#">Dolore Sed</a></li>
+											<li><a href="#">Artificial Neural Networks: Spot the Impostor</a></li>
 											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
 										</ul>
-									</li>
+									<li><a href="tech-writing.html">Technical Writing</a></li>
+									<li class="submenu">
+										<ul>
+											<li><a href="#">Documentation Plans</a></li>
+											<li><a href="#">Onboarding Developers</a></li>
+											<li><a href="#">Deployments and Environments</a></li>
+											<li><a href="#">Architectures 101</a></li>
+										</ul>
+									<li><a href="misc.html">Miscellaneous</a></li>
+									<li class="submenu">
+										<ul>
+											<li><a href="latest.html">The Latest in AI</a></li>
+											<li><a href="world.html">Tech Writing World</a></li>
+											<li><a href="other.html">Other Topics</a></li>
+										</ul>
+									<li><a href="https://brenda-leyva89.medium.com/">Blog</a></li>
+								</ul>
 								</ul>
 							</li>
 							<li><a href="contact.html" class="button primary">Contact</a></li>
@@ -245,11 +258,8 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a></li>
 						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="#" class="icon brands circle fa-linkedin"><span class="label">Linkedin</span></a></li>
 					</ul>
 
 					<ul class="copyright">
