--- a/my-projects.html
+++ b/my-projects.html
@@ -49,8 +49,7 @@
 											<li><a href="world.html">Tech Writing World</a></li>
 											<li><a href="other.html">Other Topics</a></li>
 										</ul>
-									<li><a href="https://brenda-leyva89.medium.com/">Blog</a></li>
-								</ul>
+									<li><a href="https://brenda-leyva89.medium.com/">Blog</a></li>							
 								</ul>
 							</li>
 							<li><a href="contact.html" class="button primary">Contact</a></li>
@@ -63,7 +62,7 @@
 
 					<header class="special container">
 						<span class="icon solid fa-laptop"></span>
-						<h2>Welcome to <strong>my projects</strong> section</h2>
+						<h2><strong>my projects</strong></h2>
 						<p>You can consult the details of my craft here.</p>
 					</header>
 
