update portfolio with new powers

--- a/contact.html
+++ b/contact.html
@@ -21,37 +21,7 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Home</a></li>
-							<li class="submenu">
-								<a href="my-projects.html">My Projects</a>
-								<ul>
-							<li class="current"><a href="index.html">Home</a></li>
-							<li class="submenu">
-								<a href="my-projects.html">My Projects</a>
-								<ul>
-									<li><a href="data-science.html">Data Science and AI</a></li>
-									<li class="submenu">
-										<ul>
-											<li><a href="#">Artificial Neural Networks: Spot the Impostor</a></li>
-											<li><a href="#">Consequat</a></li>
-										</ul>
-									<li><a href="tech-writing.html">Technical Writing</a></li>
-									<li class="submenu">
-										<ul>
-											<li><a href="#">Documentation Plans</a></li>
-											<li><a href="#">Onboarding Developers</a></li>
-											<li><a href="#">Deployments and Environments</a></li>
-											<li><a href="#">Architectures 101</a></li>
-										</ul>
-									<li><a href="misc.html">Miscellaneous</a></li>
-									<li class="submenu">
-										<ul>
-											<li><a href="latest.html">The Latest in AI</a></li>
-											<li><a href="world.html">Tech Writing World</a></li>
-											<li><a href="other.html">Other Topics</a></li>
-										</ul>
-									<li><a href="https://brenda-leyva89.medium.com/">Blog</a></li>							
-								</ul>
-							</li>
+							<li><a href="my-projects.html">Projects</a></li>
 							<li><a href="contact.html" class="button primary">Contact</a></li>
 						</ul>
 					</nav>
@@ -63,48 +33,34 @@
 					<header class="special container">
 						<span class="icon solid fa-envelope"></span>
 						<h2>Get In Touch</h2>
-						<p>Use the form below to give /dev/null a piece of your mind.</p>
+						<p>brenda.leyva89@gmail.com</p>
 					</header>
 
-					<!-- One -->
-						<section class="wrapper style4 special container medium">
-
-							<!-- Content -->
-								<div class="content">
-									<form>
-										<div class="row gtr-50">
-											<div class="col-6 col-12-mobile">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-mobile">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="7"></textarea>
-											</div>
-											<div class="col-12">
-												<ul class="buttons">
-													<li><input type="submit" class="special" value="Send Message" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
-								</div>
-
-						</section>
+					<section style="text-align: center;">
+						<div style="margin-bottom: 20px;">
+							<h3 style="display: inline; margin-right: 10px;">Networking:</h3>
+							<a href="https://linkedin.com/in/brenda-leyva-a-861430309" class="icon brands circle fa-linkedin" target="_blank" style="font-size: 1.5em; text-decoration: none; vertical-align: middle;">
+								<span class="label">Linkedin</span>
+							</a>
+						</div>
+						<div style="margin-bottom: 20px;">
+							<h3 style="display: inline; margin-right: 10px;">Code:</h3>
+							<a href="https://github.com/BrendaLPhys" class="icon brands circle fa-github" target="_blank" style="font-size: 1.5em; text-decoration: none; vertical-align: middle;">
+								<span class="label">Github</span>
+							</a>
+						</div>
+						<div>
+							<h3 style="display: inline; margin-right: 10px;">Thoughts:</h3>
+							<a href="https://brenda-leyva89.medium.com" class="icon brands circle fa-medium" target="_blank" style="font-size: 1.5em; text-decoration: none; vertical-align: middle;">
+								<span class="label">Medium</span>
+							</a>
+						</div>
+					</section>
 
 				</article>
 
 			<!-- Footer -->
 				<footer id="footer">
-
-					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-linkedin"><span class="label">Linkedin</span></a></li>
-					</ul>
 
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
