--- a/my-projects.html
+++ b/my-projects.html
@@ -21,37 +21,7 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Home</a></li>
-							<li class="submenu">
-								<a href="my-projects.html">My Projects</a>
-								<ul>
-							<li class="current"><a href="index.html">Home</a></li>
-							<li class="submenu">
-								<a href="my-projects.html">My Projects</a>
-								<ul>
-									<li><a href="data-science.html">Data Science and AI</a></li>
-									<li class="submenu">
-										<ul>
-											<li><a href="#">Artificial Neural Networks: Spot the Impostor</a></li>
-											<li><a href="#">Consequat</a></li>
-										</ul>
-									<li><a href="tech-writing.html">Technical Writing</a></li>
-									<li class="submenu">
-										<ul>
-											<li><a href="#">Documentation Plans</a></li>
-											<li><a href="#">Onboarding Developers</a></li>
-											<li><a href="#">Deployments and Environments</a></li>
-											<li><a href="#">Architectures 101</a></li>
-										</ul>
-									<li><a href="misc.html">Miscellaneous</a></li>
-									<li class="submenu">
-										<ul>
-											<li><a href="latest.html">The Latest in AI</a></li>
-											<li><a href="world.html">Tech Writing World</a></li>
-											<li><a href="other.html">Other Topics</a></li>
-										</ul>
-									<li><a href="https://brenda-leyva89.medium.com/">Blog</a></li>							
-								</ul>
-							</li>
+							<li><a href="my-projects.html">Projects</a></li>
 							<li><a href="contact.html" class="button primary">Contact</a></li>
 						</ul>
 					</nav>
@@ -62,123 +32,65 @@
 
 					<header class="special container">
 						<span class="icon solid fa-laptop"></span>
-						<h2><strong>my projects</strong></h2>
+						<h2><strong>projects</strong></h2>
 						<p>You can consult the details of my craft here.</p>
 					</header>
 
-					<!-- One -->
-						<section class="wrapper style4 container">
-
-							<div class="row gtr-150">
-								<div class="col-4 col-12-narrower">
-
-									<!-- Sidebar -->
-										<div class="sidebar">
-											<section>
-												<header>
-													<h3><strong>Data Science Focus</strong></h3>
-												</header>
-												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-												<footer>
-													<ul class="buttons">
-														<li><a href="#" class="button small">Learn More</a></li>
-													</ul>
-												</footer>
-											</section>
-
-											<section>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-												<header>
-													<h3><strong>The Technical Writing Process</strong></h3>
-												</header>
-												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-												<footer>
-													<ul class="buttons">
-														<li><a href="#" class="button small">Learn More</a></li>
-													</ul>
-												</footer>
-											</section>
-										</div>
-
-								</div>
-								<div class="col-8 col-12-narrower imp-narrower">
-
-									<!-- Content -->
-										<div class="content">
-											<section>
-												<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-												<header>
-													<h3><strong>Why Multidisciplinary Matters</strong></h3>
-												</header>
-												<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum massa. Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-												<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan. </p>
-												<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus, non hendrerit ipsum arcu tristique est.</p>
-											</section>
-										</div>
-
-								</div>
+					<section id="my-projects" class="wrapper style3 container special">
+						<div class="row">
+							<!-- Data Science and AI Column -->
+							<div class="col-6 col-12-narrower" style="border-right: 1px solid #ccc; padding-right: 20px;">
+								<header class="major">
+									<h2>Data Science and AI</h2>
+								</header>
+								<section>
+									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+									<header>
+										<h3>A Really Fast Train</h3>
+									</header>
+									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit.</p>
+								</section>
+								<section>
+									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+									<header>
+										<h3>An Airport Terminal</h3>
+									</header>
+									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit.</p>
+								</section>
 							</div>
-						</section>
-
-					<!-- Two -->
-						<section class="wrapper style1 container special">
-							<div class="row">
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<header>
-											<h3>Follow the latest in AI</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-										<footer>
-											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
-											</ul>
-										</footer>
-									</section>
-
-								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<header>
-											<h3>The world of Technical Writing</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-										<footer>
-											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
-											</ul>
-										</footer>
-									</section>
-
-								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<header>
-											<h3>My general interests</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-										<footer>
-											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
-											</ul>
-										</footer>
-									</section>
-
-								</div>
+					
+							<!-- Technical Writing Column -->
+							<div class="col-6 col-12-narrower" style="padding-left: 20px;">
+								<header class="major">
+									<h2>Technical Writing</h2>
+								</header>
+								<section>
+									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<header>
+										<h3>Hyperspace Travel</h3>
+									</header>
+									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit.</p>
+								</section>
+								<section>
+									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+									<header>
+										<h3>And Another Train</h3>
+									</header>
+									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit.</p>
+								</section>
 							</div>
-						</section>
+						</div>
+					</section>
 
-				</article>
+			</article>
 
 			<!-- Footer -->
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://github.com/BrendaLPhys" class="icon brands circle fa-github" target="_blank"><span class="label">Github</span></a></li>
+						<li><a href="https://linkedin.com/in/brenda-leyva-a-861430309" class="icon brands circle fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://brenda-leyva89.medium.com" class="icon brands circle fa-medium" target="_blank"><span class="label">Medium</span></a></li>
 					</ul>
 
 					<ul class="copyright">
